--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,8 +1,8 @@
-#jdbc.driverClassName=org.postgresql.Driver
-jdbc.driverClassName=org.h2.Driver
-#jdbc.url=jdbc:postgresql://localhost:5432/test
-jdbc.url=jdbc:h2:~/test12
-jdbc.username=sa
-#jdbc.username=postgres
-jdbc.password=
-#jdbc.password=postgres
+jdbc.driverClassName=org.postgresql.Driver
+#jdbc.driverClassName=org.h2.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/test
+#jdbc.url=jdbc:h2:~/test12
+#jdbc.username=sa
+jdbc.username=postgres
+#jdbc.password=
+jdbc.password=postgres
